Attribution: fixed alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,10 +32,6 @@ $text-color: rgba(255, 255, 255, 0.7);
 	color: hsl(0, 0%, 90%);
 	font-size: 11px;
 	text-align: center;
-	position: fixed;
-	width: 100%;
-	left: 0;
-	bottom: 20px;
 	&__text {
 		margin-bottom: 10px;
 		a {
@@ -53,10 +49,6 @@ $text-color: rgba(255, 255, 255, 0.7);
 			color: #d07f15;
 			background-color: #0061cc;
 		}
-	}
-	@media (max-width: 769px) {
-		text-align: left;
-		padding-left: 20px;
 	}
 }
 // *** Main Styles ***
